Fix checkstyle errors